SUBDIRS		= src libgdamm

EXTRA_DIST	= README					\
		  libgdammconfig.h.in libgdamm.h	\
		  libgdamm-3.0.pc.in

libgdamm_includedir		= $(includedir)/libgdamm-3.0
libgdamm_include_HEADERS	= libgdamm.h

libgdamm_configdir		= $(libdir)/libgdamm-3.0/include
libgdamm_config_DATA	= libgdammconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= libgdamm-3.0.pc

