SUBDIRS		= src webkitmm

EXTRA_DIST	= README					\
		  webkitmmconfig.h.in webkitmm.h	\
		  webkitmm-1.0.pc.in

webkitmm_includedir		= $(includedir)/webkitmm-1.0
webkitmm_include_HEADERS	= webkitmm.h

webkitmm_configdir		= $(libdir)/webkitmm-1.0/include
webkitmm_config_DATA	= webkitmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= webkitmm-1.0.pc

