## Copyright (c) 2001
## The libgdamm development team.

sublib_name	= libgdamm
sublib_namespace = Gda
sublib_parentdir = libgdamm
files_defs	= libgda.defs libgda_methods.defs libgda_signals.defs \
                  libgda_enums.defs libgda_others.defs libgda_docs.xml \
                  libgda_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

