## Copyright (c) 2001
## The libgdamm development team.

sublib_name	= libgdamm
sublib_namespace = Gda
sublib_parentdir = libgdamm
files_defs	= webkit.defs webkit_methods.defs webkit_signals.defs \
                  webkit_enums.defs webkit_others.defs webkit_docs.xml \
                  webkit_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

