## Copyright (c) 2001
## The libgdamm development team.

sublib_name	= webkitmm
sublib_namespace = WebKit
sublib_parentdir = webkitmm
files_defs	= webkit.defs webkit_methods.defs webkit_signals.defs \
                  webkit_enums.defs webkit_others.defs webkit_docs.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

